# ae

data/evaluation_results/: map_controller_laps.csv  unknown_laps.csv
data/lap_log/: lap_times_20251113_164142.txt  lap_times_20251113_164217.txt
install/: local_setup.sh  setup.sh
install/app_control/lib/app_control/: pure_pursuit_sim_node  stanley_node
install/app_control/share/app_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cimpcc_control/lib/cimpcc_control/: mpcc.py  mpcc_node.py
install/cimpcc_control/share/cimpcc_control/: local_setup.bash  (+9 more)
log/: latest_build
src/app_control/: CMakeLists.txt
src/app_control/config/: pure_pursuit_params.yaml  stanley_params.yaml
src/app_control/launch/: pure_pursuit_launch.py  stanley_launch.py
src/app_control/rviz/: autonomous_driving.rviz  pure_pursuit.rviz
src/app_control/src/: README.md  pure_pursuit_sim_node.cpp  stanley_node.cpp
src/cimpcc_control/: CMakeLists.txt  package.xml
src/cimpcc_control/params/: mpcc_params.yaml
src/cimpcc_control/scripts/: mpcc.py  mpcc_node.py
src/disparity_control/: CMakeLists.txt
src/disparity_control/config/: disparity_params.yaml
src/disparity_control/launch/: disparity_autodrive.launch.py
src/disparity_control/src/: disparity_autodrive_node.cpp
src/evaluation/: package.xml  setup.py
src/evaluation/config/: sections.yaml
src/evaluation/evaluation/: compare_controllers.py  evaluation_node.py
src/evaluation/launch/: evaluation.launch.py
src/f1tenth_gym_ros/config/: sim.yaml
src/f1tenth_gym_ros/f1tenth_gym_ros/: gym_bridge.py
src/f1tenth_gym_ros/launch/: gym_bridge.rviz  gym_bridge_launch.py
src/lane_selector/: package.xml  setup.cfg  setup.py
src/lane_selector/config/: lane_selector.yaml
src/lane_selector/lane_selector/: lane_selector_node.py
src/lane_selector/launch/: lane_selector_launch.py
src/map_control/: package.xml  setup.cfg  setup.py
src/map_control/config/: map_control_params.yaml
src/map_control/launch/: lap_timer.launch.py  map_controller.launch.py  map_controller_launch.py  map_controller_ojg_test.launch.py  map_with_lane_selector.launch.py  map_with_lane_selector_ojg_test.launch.py
src/map_control/map_control/: controller_manager.py  controller_manager_ojg_test.py  drive_relay.py  frenet_converter.py  lap_timer_node.py  map_controller.py  map_controller_test.py  steering_lookup.py
src/mpcc_control/: CMakeLists.txt  package.xml
src/mpcc_control/params/: mpcc_params.yaml
src/mpcc_control/scripts/: mpcc.py  mpcc_node.py
src/obs_detect/: package.xml  setup.cfg  setup.py
src/obs_detect/config/: obs_detect_params.yaml
src/obs_detect/launch/: ring_obs.launch.py
src/obs_detect/obs_detect/: boundary_viz_node.py  ring_obs_node.py
src/visualization/: README.md  package.xml  setup.cfg  setup.py
src/visualization/config/: visualization.yaml
src/visualization/launch/: csv_visualization.launch.py
src/visualization/visualization/: csv_publisher.py
track/bound/0.4_0.4/: inner_bound.csv  outer_bound.csv
track/map/: map.pgm  map.yaml  map_black.pgm  map_black.yaml  map_black_obstacle.pgm  map_black_obstacle.yaml
track/path/mpcc_path/: center_spline_derivatives.csv  centerline_waypoints.csv  left_waypoints.csv  right_waypoints.csv  track_widths.csv
(+150 files in other folders)
